<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dip"
    android:paddingLeft="16dip"
    android:paddingRight="16dip"
    android:paddingTop="8dip">


    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hs_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/item_highscore_name" />

        <TextView
            android:id="@+id/hs_score_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/item_highscore_score" />

        <TextView
            android:id="@+id/hs_game_size_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/item_highscore_size" />

        <TextView
            android:id="@+id/hs_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/item_highscore_date" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/win" />

            <CheckBox
                android:id="@+id/sh_is_win"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"

                />
        </LinearLayout>


    </LinearLayout>

    <ImageButton
        android:id="@+id/sh_delete"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:scaleType="fitXY"
        android:src="@drawable/delete" />
</LinearLayout>