<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/main_menu_background_color"
    tools:context="hu.android.dani.game2048.MainMenuActivity">



    <Button
        android:id="@+id/bt_start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_menu_button"
        android:layout_marginBottom="8dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/bt_high_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_menu_button"
        android:layout_marginBottom="8dp"
        android:text="@string/high_scores" />

    <Button
        android:id="@+id/bt_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_menu_button"
        android:text="@string/exit" />


</LinearLayout>
