<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_layout_background_color"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    tools:context="hu.android.dani.game2048.GameActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/game_area_title"
            style="@style/GameTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/restart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/restart_button"

            android:text="@string/restart"
            android:textColor="@color/restart_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_toLeftOf="@+id/best_score_textview"
            android:background="@drawable/score_textview_background"
            android:clickable="false"
            android:text="@string/game_score"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/best_score_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="7dp"
            android:background="@drawable/score_textview_background"
            android:clickable="false"
            android:text="@string/best_score"
            android:textAlignment="center"
            android:textSize="18sp" />


    </RelativeLayout>

    <hu.android.dani.game2048.view.GameView
        android:id="@+id/game_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
